--- a/styles.css
+++ b/styles.css
@@ -78,10 +78,11 @@
   .hero{
     margin: 0 auto;
     width: 80%;
-    height: 60%;
+    min-height: 60%;
     background-image: url("images/hero.png");
     background-repeat: 'no repeat';
     background-position: center;
+    background-attachment:fixed;
     background-size:cover;
     font-family: "Bebas";  
     color: #fff;
@@ -110,6 +111,7 @@
     .header{
       padding-bottom: 20px;
       padding-top: 40px;
+
     }
 
    .logo{
@@ -122,13 +124,64 @@
     float:right;
     font-size: 35px;
     margin-top:-7px;
-    margin-left:48px;
+    margin-left:38px;
    }
 
-   .hamburger:hover{
-    color:#FFCAD0;
+   .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #000;
+    margin: 6px 0;
+    transition: 0.3s;
+    border-radius: 3px;
+  }
+  
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
+
+  .dropbtn {
+    padding: 16px;
+    font-size: 12px;
+    border: none;
     cursor: pointer;
-   }
+  }
+  
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 25%;
+    overflow: auto;
+    z-index: 1;
+    font-size: 17px;
+    padding:20px;
+    right: 0px;
+    text-align: center;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {color: #FFCAD0;}
+  
+  .show {display: block;}
 
     .nav-container{
       display:none;
@@ -142,9 +195,43 @@
     .hero{
       font-size: 74px;
       line-height: 64px;
-      padding: 290px 5% 19px 5%;
+      padding: 260px 5% 19px 5%;
       width: 90%;
     }
+
+    /*begin stage two styles*/
+
+    .the-mission{
+      width:300px;
+      display:block;
+      margin: 110px auto;
+    }
+
+    h2{
+      font-size:20px;
+      font-family: "times bold";
+    }
+
+    p{
+      font-family: "times";
+      line-height: 15px;
+      font-size: 13px;
+    }
+
+
+    .flowers{
+      width: 300px;
+      height: 300px;
+      display: block;
+      margin: 80px auto;
+      background-repeat: 'no repeat';
+      background-position: center;
+      background-size: cover;
+      background-image: url(images/1.png);
+    }
+
+  
+
 
   }
 
@@ -169,6 +256,38 @@
     .hamburger{
       margin-left: 130px;
     }
+
+        /*begin stage two styles*/
+
+        .the-mission{
+          width:350px;
+          display:block;
+          margin: 180px 50px;
+          float:left;
+        }
+    
+        h2{
+          font-size:35px;
+          font-family: "times bold";
+        }
+    
+        p{
+          font-family: "times";
+          line-height: 20px;
+          font-size: 17px;
+        }
+    
+    
+        .flowers{
+          width: 250px;
+          height: 300px;
+          margin: 180px 50px;
+          background-repeat: 'no repeat';
+          background-position: center;
+          background-size: cover;
+          background-image: url(images/1.png);
+          float:right;
+        }
   }
 
   @media (min-width: 850px){
@@ -187,6 +306,16 @@
       line-height:142px;
       padding: 430px 7% 19px 7%;
       width:86%;
+    }
+
+    .the-mission{
+      width:400px;
+    }
+
+    .flowers{
+      width: 320px;
+      height: 400px;
+  
     }
 
     .header{
@@ -272,10 +401,11 @@
     .hero{
       margin: 0 auto;
       width: 80%;
-      height: 60%;
+      min-height: 60%;
       background-image: url("images/hero.png");
       background-repeat: 'no repeat';
       background-position: center;
+      background-attachment:fixed;
       background-size:cover;
       font-family: "Bebas";  
       color: #fff;
@@ -283,6 +413,20 @@
       font-weight:900;
       padding: 400px 40px 40px 40px;
       line-height:190px;
+
+
+    }
+
+    .the-mission{
+      width:400px;
+      margin-left: 150px;
+    }
+
+    .flowers{
+      width: 320px;
+      height: 400px;
+      margin-right: 180px;
+  
     }
   
   }
