--- a/styles.css
+++ b/styles.css
@@ -1,432 +1,431 @@
 @font-face {   
-    font-family: "Bebas";   
-    src: url('fonts/BebasNeue-Regular.ttf') format('truetype');             
-  }
-  
-  @font-face {
-    font-family: "times";
-    src: url('fonts/Times\ New\ Roman.ttf') format('truetype'); 
-  }
-  
-  @font-face {
-    font-family: "times italic";
-    src: url('fonts/Times\ New\ Roman\ Italic.ttf') format('truetype'); 
-  }
-  
-  @font-face {
-    font-family: "times bold";
-    src: url('fonts/Times\ New\ Roman\ Bold.ttf') format('truetype'); 
-  }
-  
-  @font-face {
-    font-family: "times bold italic";
-    src: url('fonts/Times\ New\ Roman\ Bold\ Italic.ttf') format('truetype'); 
-  }
-  
-  body{
-    margin: 0;
-  }
+  font-family: "Bebas";   
+  src: url('fonts/BebasNeue-Regular.ttf') format('truetype');             
+}
 
-  .container{
-    margin: 0 auto;
-    padding: 50px;
-    width: 100%;
-  }
+@font-face {
+  font-family: "times";
+  src: url('fonts/Times\ New\ Roman.ttf') format('truetype'); 
+}
 
-  .header{
-    margin: 0 auto;
-    width: 80%;
-    font-family: "times bold";
-    display: flex;
-    padding-bottom: 40px;
-  }
+@font-face {
+  font-family: "times italic";
+  src: url('fonts/Times\ New\ Roman\ Italic.ttf') format('truetype'); 
+}
 
+@font-face {
+  font-family: "times bold";
+  src: url('fonts/Times\ New\ Roman\ Bold.ttf') format('truetype'); 
+}
+
+@font-face {
+  font-family: "times bold italic";
+  src: url('fonts/Times\ New\ Roman\ Bold\ Italic.ttf') format('truetype'); 
+}
+
+
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+a {
+  color:inherit;
+}
+
+h2{
+  font-family: "times bold italic";
+  margin-bottom: 10px;
+}
+
+p {
+  line-height: 1.9vh;
+}
+
+/*nav bar styles & hero*/
+
+.header{
+  margin: 0 auto;
+  width: 80%;
+  font-family: "times bold";
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 15px;
+  }
+  
   .logo {
-    font-size: 32px;
-    line-height:28px;
-    width:30%;
+  font-size: 32px;
+  line-height:28px;
+  width:30%;
   }
-
+  
   .nav-container{
-    width:30%;
-    display:flex;
-    justify-content: space-evenly;
+  width:30%;
+  display:flex;
+  justify-content: space-evenly;
   }
-
+  
   .nav-buttons{
-    font-size: 15px;
-    margin-top: 43px;
+  font-size: 15px;
+  margin-top: 43px;
   }
-
+  
   .nav-buttons:hover{
-    color: #FFCAD0;
-    cursor:pointer;
+  color: #FFCAD0;
+  cursor:pointer;
   }
-
+  
   .social-container{
-    display:flex;
-    justify-content: flex-end;
-    width: 40%;
+  display:flex;
+  justify-content: flex-end;
+  width: 40%;
   }
-
+  
   .social{
-    margin: 24px 5px 0px 0px;
-    align-items: flex-end;
-    cursor:pointer;
+  margin: 24px 5px 0px 0px;
+  align-items: flex-end;
+  cursor:pointer;
   }
-
+  
+  
   .hero{
-    margin: 0 auto;
-    width: 80%;
-    min-height: 60%;
-    background-image: url("images/hero.png");
-    background-repeat: 'no repeat';
-    background-position: center;
-    background-attachment:fixed;
-    background-size:cover;
-    font-family: "Bebas";  
-    color: #fff;
-    font-size:250px;
-    font-weight:900;
-    padding: 400px 40px 40px 40px;
-    line-height:190px;
-  }
-
-  .footer{
-    width: 85%;
-    margin: 0 auto;
-    padding-top: 20px;
-    display:flex;
-    font-size: 12px;
-    font-family: "times italic";
-    justify-content: flex-end;
-  }
-
-
-  @media (min-width: 0px){
-    .container{
-      padding: 0px;
-    }
-
-    .header{
-      padding-bottom: 20px;
-      padding-top: 40px;
-
-    }
-
-   .logo{
-    font-size: 30px;
-    width:70%;
-   }
-
-   .hamburger{
-    width: 10%;
-    float:right;
-    font-size: 35px;
-    margin-top:-7px;
-    margin-left:38px;
-   }
-
-   .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #000;
-    margin: 6px 0;
-    transition: 0.3s;
-    border-radius: 3px;
-  }
-  
-  .change .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
-  }
-  
-  .change .bar2 {opacity: 0;}
-  
-  .change .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
-  }
-
-  .dropbtn {
-    padding: 16px;
-    font-size: 12px;
-    border: none;
-    cursor: pointer;
+  width: 100%;
+  height: 105vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
   }
   
   
-  .dropdown {
-    position: relative;
-    display: inline-block;
+  .text-wrapper{
+  text-align: center;
   }
   
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    min-width: 25%;
-    overflow: auto;
-    z-index: 1;
-    font-size: 17px;
-    padding:20px;
-    right: 0px;
-    text-align: center;
+  .headline{
+  font-size: 25vw;
+  font-family: "Bebas"; 
+  color: pink;
+  line-height: 20vw;
   }
   
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  .headline::first-line{
+  color: #fff;
   }
   
-  .dropdown-content a:hover {color: #FFCAD0;}
+  .sub-headline{
+  font-size: 4vw;
+  font-family: "times bold italic";
+  color: #fff;
+  }
   
-  .show {display: block;}
-
-    .nav-container{
-      display:none;
-    }
-
-    .social-container{
-      display:none;
-    }
-    
-
-    .hero{
-      font-size: 74px;
-      line-height: 64px;
-      padding: 260px 5% 19px 5%;
-      width: 90%;
-    }
-
-    /*begin stage two styles*/
-
-    .the-mission{
-      width:300px;
-      display:block;
-      margin: 110px auto;
-    }
-
-    h2{
-      font-size:20px;
-      font-family: "times bold";
-    }
-
-    p{
-      font-family: "times";
-      line-height: 15px;
-      font-size: 13px;
-    }
-
-
-    .flowers{
-      width: 300px;
-      height: 300px;
-      display: block;
-      margin: 80px auto;
-      background-repeat: 'no repeat';
-      background-position: center;
-      background-size: cover;
-      background-image: url(images/1.png);
-    }
-
+  .parallax{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 110%;
+  object-fit: cover;
+  z-index: -1;
+  }
   
-
-
+  .overflow{
+  height: 100vh;
   }
 
-  @media (min-width: 450px){
-    .hero{
-      font-size:115px;
-      line-height:89px;
-    }
+/*styles for the two headliner columns under hero*/
 
-    .hamburger{
-      margin-left: 130px;
-    }
+.element-one{
+  animation-duration: 3s;
+  animation-name: slidein;
+  width: 70%;
+  margin: 32px auto;
+  transition: ease-in;
+  
+}
+
+.inner-wrap{
+  display: flex;
+  justify-content:space-between;
+}
+
+.col-one{
+  width:40%;
+  
+}
+
+.col-two{
+  width:40%;
+}
+
+/* last home page piece */
+.final-element{
+  width:80%;
+  margin: 100px auto;
+  font-size:larger;
+}
+
+.bebas{
+  font-size: 10vh;
+  font-family: "Bebas";
+  color:#FFCAD0;
+  line-height: 9vh;
+  margin: 30px 0px;
+}
+
+/*paralax flower styles*/
+.flower-one{
+  position: absolute;
+  z-index: -1;
+  top: 100vh;
+  right:40%;
+}
+
+.flower-two{
+  position: absolute;
+  z-index: -1;
+  top: 89vh;
+  right: 30%;
+}
+
+.flower-three{
+  position: absolute;
+  z-index:-1;
+  top: 94vh;
+  right: 2%;
+}
+
+.flower-four{
+  position: absolute;
+  z-index:-1;
+  top: 88vh;
+  left: 40%;
+}
+
+.flower-five{
+  position: absolute;
+  z-index:-1;
+  top: 77vh;
+  left: 60%;
+}
+
+.flower-six{
+  position: absolute;
+  z-index:-1;
+  top: 89vh;
+  left: 14%;
+  overflow:hidden;
+}
+
+.flower-seven{
+  position: absolute;
+  z-index:-1;
+  top: 104vh;
+  left: 2%;
+}
+
+
+
+/*footer!*/
+
+footer{
+  background-color: #FFCAD0;
+  color:#fff;
+  width: 100%;
+  padding:8%;
+  display:flex;
+  justify-content: end;
+}
+
+.column-foot{
+  width:25%;
+  margin: 0px 10px;
+}
+
+
+/* style for really simple slide show element*/
+
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 80%;
+  position: relative;
+  margin: 150px auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color:#fff;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a pink background color */
+.prev:hover, .next:hover {
+  background-color: #FFCAD0;
+  color:white;
+}
+
+
+
+
+
+@media (min-width: 0px){
+
+.logo{
+  width:70%;
+}
+
+.hamburger-container{
+  width: 25%;
+  display:flex;
+  justify-content: flex-end;
+}
+
+.hamburger{
+  font-size: 35px;
+  margin-top:8px;
+  margin-left:38px;
+ }
+
+ .bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 3px;
+  background-color: #000;
+  margin: 9px 0;
+  transition: 0.3s;
+  border-radius: 3px;
+}
+
+.change .bar1 {
+  transform: translate(0, 6px) rotate(-45deg);
+}
+
+.change .bar3 {
+  transform: translate(0, -6px) rotate(45deg);
+}
+
+.dropbtn {
+  padding: 16px;
+  font-size: 12px;
+  border: none;
+  cursor: pointer;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  min-width: 15%;
+  overflow: auto;
+  z-index: 1;
+  font-size: 17px;
+  padding:18px;
+  padding-top:30px;
+  right: 0px;
+  top:120px;
+  text-align: center;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {color: #FFCAD0;}
+
+.show {display: block;}
+
+.nav-container{
+  display:none;
+}
+
+.social-container{
+  display:none;
+}
+
+
+}
+
+
+
+@media (min-width: 850px){
+.hamburger-container{
+display: none;
+}
+
+.logo{
+  width: 30%;
+}
+
+.nav-container{
+display:flex;
+width: 50%;
+margin-left: 150px;
+}
+}
+
+
+
+@media (min-width: 950px){
+.nav-container{
+  width: 40%;
+}
+
+.social-container{
+  display:flex;
+}
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
   }
 
-  @media (min-width: 650px){
-    .hero{
-      font-size:155px;
-      line-height:122px;
-      padding: 390px 5% 19px 5%;
-    }
-
-    .hamburger{
-      margin-left: 130px;
-    }
-
-        /*begin stage two styles*/
-
-        .the-mission{
-          width:350px;
-          display:block;
-          margin: 180px 50px;
-          float:left;
-        }
-    
-        h2{
-          font-size:35px;
-          font-family: "times bold";
-        }
-    
-        p{
-          font-family: "times";
-          line-height: 20px;
-          font-size: 17px;
-        }
-    
-    
-        .flowers{
-          width: 250px;
-          height: 300px;
-          margin: 180px 50px;
-          background-repeat: 'no repeat';
-          background-position: center;
-          background-size: cover;
-          background-image: url(images/1.png);
-          float:right;
-        }
+  to {
+    margin-left: 15%;
   }
+}
 
-  @media (min-width: 850px){
-    .hamburger{
-      display:none;
-    }
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
 
-    .container{
-      margin: 0 auto;
-      padding: 5%;
-      width: 90%;
-    }
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
 
-    .hero{
-      font-size:175px;
-      line-height:142px;
-      padding: 430px 7% 19px 7%;
-      width:86%;
-    }
-
-    .the-mission{
-      width:400px;
-    }
-
-    .flowers{
-      width: 320px;
-      height: 400px;
-  
-    }
-
-    .header{
-      padding-bottom: 40px;
-      padding-top: 20px;
-    }
-
-    .logo {
-      font-size: 32px;
-      line-height:28px;
-      width:30%;
-    }
-
-    .nav-container{
-      display:flex;
-      width: 60%;
-      margin-left: 150px;
-      margin-top:-4px;
-    }
-
-  }
-
-  @media (min-width: 950px){
-    .hero{
-      font-size: 205px;
-      line-height: 162px;
-    }
-  }
-
-  @media (min-width: 1280px){
-    .container{
-      margin: 0 auto;
-      padding: 5%;
-      width: 90%;
-    }
-
-    .hamburger{
-      display:none;
-    }
-  
-    .header{
-      margin: 0 auto;
-      width: 80%;
-      font-family: "times bold";
-      display: flex;
-      padding-bottom: 40px;
-    }
-  
-    .logo {
-      font-size: 32px;
-      line-height:28px;
-      width:30%;
-    }
-  
-    .nav-container{
-      width:30%;
-      display:flex;
-      justify-content: space-evenly;
-    }
-  
-    .nav-buttons{
-      font-size: 15px;
-      margin-top: 43px;
-    }
-  
-    .nav-buttons:hover{
-      color: #FFCAD0;
-      cursor:pointer;
-    }
-  
-    .social-container{
-      display:flex;
-      justify-content: flex-end;
-      width: 40%;
-    }
-  
-    .social{
-      margin: 24px 5px 0px 0px;
-      align-items: flex-end;
-      cursor:pointer;
-    }
-  
-    .hero{
-      margin: 0 auto;
-      width: 80%;
-      min-height: 60%;
-      background-image: url("images/hero.png");
-      background-repeat: 'no repeat';
-      background-position: center;
-      background-attachment:fixed;
-      background-size:cover;
-      font-family: "Bebas";  
-      color: #fff;
-      font-size:250px;
-      font-weight:900;
-      padding: 400px 40px 40px 40px;
-      line-height:190px;
-
-
-    }
-
-    .the-mission{
-      width:400px;
-      margin-left: 150px;
-    }
-
-    .flowers{
-      width: 320px;
-      height: 400px;
-      margin-right: 180px;
-  
-    }
-  
-  }
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
