--- a/styles.css
+++ b/styles.css
@@ -1,546 +1,284 @@
 @font-face {   
-  font-family: "Bebas";   
-  src: url('fonts/BebasNeue-Regular.ttf') format('truetype');             
-}
-
-@font-face {
-  font-family: "times";
-  src: url('fonts/Times\ New\ Roman.ttf') format('truetype'); 
-}
-
-@font-face {
-  font-family: "times italic";
-  src: url('fonts/Times\ New\ Roman\ Italic.ttf') format('truetype'); 
-}
-
-@font-face {
-  font-family: "times bold";
-  src: url('fonts/Times\ New\ Roman\ Bold.ttf') format('truetype'); 
-}
-
-@font-face {
-  font-family: "times bold italic";
-  src: url('fonts/Times\ New\ Roman\ Bold\ Italic.ttf') format('truetype'); 
-}
-
-
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-
-a {
-  color:inherit;
-}
-
-h2{
-  font-family: "times bold italic";
-  margin-bottom: 10px;
-}
-
-p {
-  line-height: 1.2rem;
-}
-
-/*nav bar styles & hero*/
-
-.header{
-  margin: 0 auto;
-  width: 80%;
-  font-family: "times bold";
-  display: flex;
-  padding-top: 50px;
-  padding-bottom: 15px;
+    font-family: "Bebas";   
+    src: url('fonts/BebasNeue-Regular.ttf') format('truetype');             
   }
   
-  .logo {
-  font-size: 32px;
-  line-height:28px;
-  width:30%;
+  @font-face {
+    font-family: "times";
+    src: url('fonts/Times\ New\ Roman.ttf') format('truetype'); 
   }
   
-  .nav-container{
-  width:45%;
-  display:flex;
-  justify-content: space-evenly;
+  @font-face {
+    font-family: "times italic";
+    src: url('fonts/Times\ New\ Roman\ Italic.ttf') format('truetype'); 
   }
   
-  .nav-buttons{
-  font-size: 15px;
-  margin-top: 43px;
-  margin-right: 6px;
+  @font-face {
+    font-family: "times bold";
+    src: url('fonts/Times\ New\ Roman\ Bold.ttf') format('truetype'); 
   }
   
-  .nav-buttons:hover{
-  color: #FFCAD0;
-  cursor:pointer;
+  @font-face {
+    font-family: "times bold italic";
+    src: url('fonts/Times\ New\ Roman\ Bold\ Italic.ttf') format('truetype'); 
+  }
+
+  mark {
+    background-color: #FFDA69 !important;
+    line-height: 1.8rem;
+  }
+
+  a {
+    color: inherit !important;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  a:hover {
+    color: inherit;
+    text-decoration: none !important;
+  }
+
+  h1{
+    font-family: "times bold";
+    font-size: 22px !important;
+    line-height: 1.1rem;
+  }
+
+  h3{
+    font-family: "times italic";
+    font-size: 3rem !important;
+    line-height: 3rem !important;
+  }
+
+  h4 {
+    font-family: "times bold";
+    font-size: 14px !important;
+  }
+
+  h5{
+    font-family: "times italic";
+    font-size: 2rem !important;
+    line-height: 2rem !important;
+  }
+
+  p {
+    font-family: "times";
+    font-size: .9rem;
+  }
+
+  .gray-bar{
+    background-color: #E1E1E1;
+    height:35px;
+  }
+
+  .card{
+    border: 10px solid #FFCAD0 !important;
+    border-radius: 0px !important;
+  }
+
+  .container-fluid{
+    padding: 0px !important;
+  }
+
+  header{
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    height: 122px;
+    padding: 0px 30px 20px 30px;
+    width:100%;
+  }
+
+  nav {
+    display: flex;
+    align-items: end;
+    justify-content: end;
+  }
+
+  .logo{
+    font-family: "times bold";
+    font-size: 30px;
+    line-height: 1.5rem;
+    margin-left: 50px;
+  }
+
+  nav li{
+    font-family: "times";
+    list-style: none;
+    font-size: 1.1rem;
+    padding-right: 20px;
+    align-items: end;
+  }
+
+  nav a:hover{
+    text-decoration: none;
+    color: #FFCAD0 !important;
+  }
+
+  ul{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+    margin-bottom: 0px !important;
+  }
+
+  section{
+    margin-bottom: 100px;
   }
   
-  .social-container{
-  display:flex;
-  justify-content: flex-end;
-  width: 40%;
+  .row{
+    margin-right: 0px !important;
+    margin-left: 0px !important;
   }
-  
-  .social{
-  margin: 24px 5px 0px 0px;
-  align-items: flex-end;
-  cursor:pointer;
+
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 3px;
+    background-color: #000;
+    margin: 9px 0;
+    transition: 0.9s;
+    border-radius: 3px;
   }
-  
-  
-  .hero{
+
+  /* drop down menu styling*/
+
+.menu {
+    position: relative;
+    display: inline-block;
+    padding-right: 30px;
+}
+
+
+.menu #mobilemenu {
+    display:none;
+    font-family: "times italic";
+    background-color: #fff;
+    position: absolute;
+    min-width: 150px;
+    padding: 20px 20px;
+    text-align: center;
+    top:50px;
+    right: 0px;
+    z-index: 5;
+  }
+
+#mobilemenu li{
+    list-style: none;
+}
+
+#mobilemenu li a:hover{
+   color:#FFCAD0 !important;
+}
+
+
+/*home page guts styles*/
+
+.hero{
+  background-image: url("images/hero.png");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 80vh;
   width: 100%;
-  height: 105vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  overflow: hidden;
-  }
-  
-  
-  .text-wrapper{
+  margin-bottom: 20px;
   text-align: center;
-  }
-  
-  .headline{
+}
+
+.hero-headliner{
   font-size: 25vw;
-  font-family: "Bebas"; 
-  color: pink;
-  line-height: 20vw;
-  }
-  
-  .headline::first-line{
-  color: #fff;
-  }
-  
-  .sub-headline{
-  font-size: 4vw;
-  font-family: "times bold italic";
-  color: #fff;
-  }
-  
-  .parallax{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 110%;
-  object-fit: cover;
-  z-index: -1;
-  }
-  
-  .overflow{
-  height: 100vh;
-  }
-
-/*styles for the two headliner columns under hero*/
-
-.element-one{
-  animation-duration: 3s;
-  animation-name: slidein;
-  width: 70%;
-  margin: 32px auto;
-  transition: ease-in;
-  
-}
-
-.inner-wrap{
-  display: flex;
-  justify-content:space-between;
-}
-
-.col-one{
-  width:40%;
-  
-}
-
-.col-two{
-  width:40%;
-}
-
-/* last home page piece */
-.final-element{
-  width:80%;
-  margin: 100px auto;
-  font-size:larger;
-}
-
-.bebas{
-  font-size: 10vh;
+  text-transform: uppercase;
   font-family: "Bebas";
-  color:#FFCAD0;
-  line-height: 9vh;
-  margin: 30px 0px;
+  color:#fff;
+  font-weight: 700;
+  line-height: 20vw;
 }
 
-/*paralax flower styles*/
-
-.flower-one{
-  position: absolute;
-  z-index: -1;
-  top: 92vh;
-  right:37%;
-  overflow: hidden;
+.spacer{
+  height: 25px;
+  background-color: #FFCAD0;
+  margin-bottom: 100px;
 }
 
-.flower-two{
-  position: absolute;
-  z-index: -5;
-  top: 101vh;
-  right: 50%;
-  overflow: hidden;
+.image-slider{
+  border: 12px solid #FFCAD0;
+  width: 350px;
+  height: 350px;
+  z-index: 0;
+  position: relative;
 }
 
-.flower-three{
-  position: absolute;
-  z-index:-1;
-  top: 94vh;
-  right: 7%;
-  overflow: hidden;
-}
-
-.flower-four{
-  position: absolute;
-  z-index:-2;
-  top: 88vh;
-  left: 40%;
-  overflow: hidden;
-}
-
-.flower-five{
-  position: absolute;
-  z-index:-2;
-  top: 77vh;
-  left: 60%;
-  overflow: hidden;
-}
-
-.flower-six{
-  position: absolute;
-  z-index:-3;
-  top: 88vh;
-  left: 18%;
-  overflow: hidden;
-}
-
-.flower-seven{
-  position: absolute;
-  z-index:-1;
-  top: 99vh;
-  left: 10%;
-  overflow: hidden;
-}
-
-
-
-/*footer!*/
-
-footer{
+.image-arrows{
   background-color: #FFCAD0;
   color:#fff;
-  width: 100%;
-  padding:8%;
-  display:flex;
-  justify-content: end;
-}
-
-.column-foot{
-  width:25%;
-  margin: 0px 10px;
-}
-
-
-/* style for really simple slide show element*/
-
-.mySlides {display: none}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 80%;
-  position: relative;
-  margin: 150px auto;
-}
-
-/* Next & previous buttons */
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: auto;
-  padding: 0px 20px;
-  color: white;
-  font-weight: bold;
-  font-size: 22px;
-  user-select: none;
-  background-color:#E0DAD3;
-  font-family: "times bold";
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  padding-top: 35%;
-}
-
-/* On hover, add a pink background color */
-.next:hover {
-  background-color: #FFCAD0;
-  color:white;
-}
-
-
-
-
-
-@media (min-width: 0px){
-
-.logo{
-  width:70%;
-}
-
-.hamburger-container{
-  width: 25%;
-  display:flex;
-  justify-content: flex-end;
-}
-
-.hamburger{
-  font-size: 35px;
-  margin-top:8px;
-  margin-left:38px;
- }
-
- .bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 3px;
-  background-color: #000;
-  margin: 9px 0;
-  transition: 0.3s;
-  border-radius: 3px;
-}
-
-.change .bar1 {
-  transform: translate(0, 6px) rotate(-45deg);
-}
-
-.change .bar3 {
-  transform: translate(0, -6px) rotate(45deg);
-}
-
-.dropbtn {
-  padding: 16px;
-  font-size: 12px;
-  border: none;
-  cursor: pointer;
-}
-
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #fff;
-  min-width: 15%;
-  overflow: auto;
+  font-weight: 500;
+  padding: 3px 15px;
+  position:absolute;
+  left: 0px;
+  bottom: 0px;
   z-index: 1;
-  font-size: 17px;
-  padding:18px;
-  padding-top:30px;
-  right: 0px;
-  top:120px;
-  text-align: center;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+.headliner{
+  margin-left: 10%;
+  margin-top: 150px;
+  font-size: 15vw;
+  line-height: 12vw;
+  font-family: "Bebas";
+  font-weight: 700;
+  color:#FFCAD0;
 }
 
-.dropdown-content a:hover {color: #FFCAD0;}
-
-.show {display: block;}
-
-.nav-container{
-  display:none;
+.sub-liner{
+  margin-left: 10%;
+  font-size: 6vw;
+  font-family: "times italic";
+  color:#E1E1E1;
+  line-height: 4rem;
 }
 
-.social-container{
-  display:none;
+.abs-flower-one{
+  position: absolute;
+  right: 2%;
+  top: 15%;
 }
 
-.inner-wrap{
-  display: block;
-  width: 100%;
+.abs-flower-two{
+  position:absolute;
+  right: 28%;
+  top: 35%;
 }
 
-.col-one{
-  margin-bottom: 32px;
-  width:100%;
+.abs-flower-three{
+  position:absolute;
+  right: 20%;
+  top: 55%;
 }
 
-.col-two{
-  margin-bottom: 32px;
-  width:100%;
-}
-
-footer {
-  flex-direction: column;
-}
+/*shop styles*/
 
 
-.column-foot{
-  width: 90%;
-  border-bottom: 1px solid white;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
-}
 
-.flower-five{
-  display:none;
-}
+/*footer styles */
 
-.flower-two{
-  left: 0;
-  top: 90vh;
-}
-
-.flower-four{
-  left: 55%;
-}
-
-.flower-three{
-  right: 0;
-}
-
-}
-
-@media (min-width: 650px){
-  .col-one{
-    width:47%;
+  footer{
+    background-color: #FFCAD0;
+    padding: 50px;
   }
 
-
-  .flower-one{
-    top: 92vh;
-    right:37%;
-  }
-  
-  .flower-two{
-    top: 101vh;
-    right: 50%;
-  }
-  
-  .flower-three{
-    top: 94vh;
-    right: 7%;
-  }
-  
-  .flower-four{ 
-    top: 88vh;
-    left: 40%;
-
-  }
-  
-  .flower-five{
-    top: 77vh;
-    left: 60%;
-    display:block;
-  }
-  
-  .flower-six{
-    top: 88vh;
-    left: 18%;
-  }
-  
-  .flower-seven{
-    top: 86vh;
-    left: 10%;
-  }
-  
-  .col-two{
-    width:47%;
+  footer li{
+    font-family: "times bold";
+    list-style: none;
+    text-align: left;
+    font-size: .9rem;
+    padding-right: 20px;
   }
 
-  footer {
-    flex-direction:inherit;
+  footer li:hover{
+    text-decoration: none;
+    color: #fff;
   }
 
-  .inner-wrap{
-    display:flex;
-  }
-
-  .column-foot{
-    width:25%;
-    margin: 0px 10px;
-    border: none;
-  }
-}
-
-
-
-@media (min-width: 850px){
-.hamburger-container{
-display: none;
-}
-
-.logo{
-  width: 30%;
-}
-
-.nav-container{
-display:flex;
-width: 50%;
-margin-left: 150px;
-}
-}
-
-
-
-@media (min-width: 1050px){
-.nav-container{
-  width: 40%;
-}
-
-
-
-.social-container{
-  display:flex;
-}
-}
-
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-  }
-
-  to {
-    margin-left: 15%;
-  }
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
